--- a/app/src/main/res/layout/activity_power.xml
+++ b/app/src/main/res/layout/activity_power.xml
@@ -30,9 +30,9 @@
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/white"
         android:fontFamily="casual"
         android:onClick="insta"
@@ -41,6 +41,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
@@ -92,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="54dp"
         android:onClick="nextact"
-        android:text="Access Flask"
+        android:text="Dictionary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
